BUGFIX: article title images scaled
Used different scaling for article page vs main dish homepage so that
tall and skinny article images would show up in their full glory on the
article page even if they're mercilessly cropped on the homepage.


Former-commit-id: 37b424fb69802ec08663fe9c1f581de5c2dc4b85

--- a/WWW/assets/css/main.css
+++ b/WWW/assets/css/main.css
@@ -2127,7 +2127,7 @@
             display: block;
             margin: 0 0 3em 0;
             max-width: 100%;
-            /*max-height:30em;*/
+            max-height:30em;
         }
 
             .image.featured img {
@@ -2644,6 +2644,10 @@
                     text-transform: uppercase;
                     white-space: nowrap;
                 }
+
+        .post > .title.image img {
+            max-height: 50em;
+        }
 
         .post > .image.featured {
             overflow: hidden;
